--- a/opsmx-isd-register/src/main/resources/templates/index.html
+++ b/opsmx-isd-register/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
                             if(greeting.text == "success"){
                                 location.assign("http://opsmx.freshdesk.com/support/login");
                             }else {
-                                location.assign("http://www.yahoo.com");
+                                location.assign("http://www.error.com");
                             }
                         }
                     });
