--- a/opsmx-isd-register/src/main/resources/templates/index.html
+++ b/opsmx-isd-register/src/main/resources/templates/index.html
@@ -3,27 +3,28 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Users</title>
+        <title></title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-        <link rel="stylesheet" href="/css/shards.min.css">
+<!--        <link rel="stylesheet" href="/css/shards.min.css">-->
         <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <script src="/webjars/sockjs-client/sockjs.min.js"></script>
         <script src="/webjars/stomp-websocket/stomp.min.js"></script>
         <script type="text/javascript">
             var stompClient = null;
             function connect() {
-                var socket = new SockJS('/opsmx-spinnaker-account');
+                var socket = new SockJS(window.location.protocol + '//' + window.location.hostname + ':8010/opsmx-spinnaker-account');
                 stompClient = Stomp.over(socket);
                 stompClient.connect({}, function (frame) {
-                    console.log('Connected: ' + frame);
                     stompClient.subscribe('/topic/greetings', function (greeting) {
-                        alert(greeting);
+                        console.log(greeting);
                         if(greeting.from == "ashish.singh@opsmx.io"){
                             if(greeting.text == "success"){
+                                // success case : progress page can now forward user to login page
                                 location.assign("http://opsmx.freshdesk.com/support/login");
                             }else {
+                                // exception or timeout : user is displayed with message or forward to relevant exception page.
                                 location.assign("http://www.error.com");
                             }
                         }
@@ -36,40 +37,5 @@
         </script>
     </head>
     <body>
-        <div th:switch="${users}" class="container my-5">
-            <div class="row">
-                <div class="col-md-6">
-                    <h2 th:case="null">No users yet!</h2>
-                    <div th:case="*">
-                        <h2 class="my-5">Users</h2>
-                        <table class="table table-striped table-responsive-md">
-                            <thead>
-                                <tr>
-                                    <th>First Name</th>
-                                    <th>Last Name</th>
-                                    <th>Company Name</th>
-                                    <th>Business Email</th>
-                                    <th>Contact Number</th>
-                                    <th>Edit</th>
-                                    <th>Delete</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr th:each="user : ${users}">
-                                    <td th:text="${user.firstName}"></td>
-                                    <td th:text="${user.lastName}"></td>
-                                    <td th:text="${user.companyName}"></td>
-                                    <td th:text="${user.businessEmail}"></td>
-                                    <td th:text="${user.contactNumber}"></td>
-                                    <td><a th:href="@{/edit/{id}(id=${user.id})}" class="btn btn-primary"><i class="fas fa-user-edit ml-2"></i></a></td>
-                                    <td><a th:href="@{/delete/{id}(id=${user.id})}" class="btn btn-primary"><i class="fas fa-user-times ml-2"></i></a></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>      
-                    <p class="my-5"><a href="/signup" class="btn btn-primary"><i class="fas fa-user-plus ml-2"></i></a></p>
-                </div>
-            </div>
-        </div>
     </body>
 </html>
